RC 3

Fixed blinking detector bug in tutorial.
Enlarged hit area for dialog close button.
Aligned bitmap fonts on pixel boundaries to prevent blurring.
Added link menu accessed by clicking Aether Thoery logo.
Adjusted menu spacing.

RC 2

Time Attack clock will now blink when game over is triggered by time out.
Game over window will now wait 1 seconds before appearing.
Added close arrow to Options, Credits, Records and Pause dialogs.
New background music and sound effects.
BGM now plays continuously with volume changes betweeen scenes.
Button colors adjusted.
Adjusted dialog text alignment for consistency.
Pause dialog now has restart option.
Pause dialog can be dismissed using arrow or pause button.
Added new background image.
Background, detector, and map are now rendered into a single texture to improve fill rate.
Score popups are now marked invisible when they are fully transparent.  Reduces render batches.


RC 1

Main menu windows now close by tapping the top 25% of the screen.
Game will now play the tutorial on first run.
Can now reset tutorial from options screen.
High scores for Time Attack and Accelerator will now be loaded from Game Center.
Achievement popup is now shown during game if gamecenter is available.
Menu items now change color instead of scaling.
Can now Tweet your score from the Game Over screen.
Sound and music toggles reworded.
High score screen renamed to Records
Records screen now has buttons for game center leaderboard and achievements.
UI Colors Tweaked
It's now possible to get the 4X Bonus achievement.
6X combo achievement removed.
5X bonus achievement added.


Beta 10

Achievements implemented.
Increased minimum match size from 4 to 5.
Accelerator now speeds up in 0.2 second increments so max speed is level 10.
Scoring is now per particle not per set.  This means larger have a higher starting value before applying multipliers.
Game will now pause when it is entering the background state.
Fixed memory leak in SFX loading code.