@@ -4,17 +4,6 @@ TASKS
 . iTunes Connect App Setup
     - Screenshots
 
-. Website
-
-. Add blurb about bonus and combo to tutorial.
-
-. Facebook: Add radio menu to home screen.  Should include.
-    - http://www.aethertheory.com
-    - http://facebook.com/AetherTheoryLLC
-    - Support email?
-    
-    https://www.facebook.com/AetherTheoryLLC/likes#
-
 BUGS
 ----
 
